2002-06-05  Mike Kestner <mkestner@speakeasy.net>

	* generator/Property.cs : Fix get{} GLib.Value passing.
	* glib/Object.cs : GetProperty passes the GLib.Value now.
	* glib/Value.cs : Add a ctor to create Values for props.
	* glue/value.cs : add gtksharp_value_create_from_property.

2002-05-29  Mike Kestner <mkestner@speakeasy.net>

	* */Makefile.in : remove generated source in clean target.

2002-05-29  Mike Kestner <mkestner@speakeasy.net>

	* generator/CallbackGen.cs : Fix build breaker from refactoring.
	* sample/Makefile.in : Build the menu sample on linux.

2002-05-28  Mike Kestner <mkestner@speakeasy.net>

	* makefile : add separate targets for native and platform
	  independent products per request from debian packager 
	  Alp Toker <alp@atoker.com>

2002-05-26  Mike Kestner <mkestner@speakeasy.net>

	* generator/Parser.cs : Implement Alias node parsing.
	* generator/SymbolTable.cs : resolve aliased types.

2002-05-23  Mike Kestner <mkestner@speakeasy.net>

	* generator/BoxedGen.cs : Update for Static SymbolTable
	* generator/CallbackGen.cs : Use GenBase and Parameters classes
	* generator/CodeGenerator.cs : Update for Static SymbolTable
	* generator/Ctor.cs : code from StructBase using Parameters class
	* generator/EnumGen.cs : Use GenBase
	* generator/GenBase.cs : Abstract Stream Writer creation, stream
	  boilerplate, and common *Name properties
	* generator/IGeneratable.cs : Update for Static SymbolTable
	* generator/InterfaceGen.cs : Use GenBase
	* generator/Method.cs : code from StructBase using Parameters class
	* generator/ObjectGen.cs : Major refactoring. Use GenBase. Build
	  tables of Member generatables at construct time to facilitate 
	  future name collision resolution logic.
	* generator/Parameters.cs : new generatable to abstract duplicated
	  parameter parsing logic.
	* generator/Parser.cs : Update for Static SymbolTable
	* generator/Property.cs : code from ObjectGen 
	* generator/Signal.cs : code from ObjectGen 